--- a/static/quiz/quiz-04.html
+++ b/static/quiz/quiz-04.html
@@ -1689,7 +1689,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Quiz 04</h1>
-<h3 class="subtitle">open Thu, Nov 5 at 12; due Sun, Nov 8 at 11:59p</h3>
+<h3 class="subtitle">due Sun, Nov 8 at 11:59p</h3>
 
 </div>
 
