--- a/static/quiz/quiz-04.html
+++ b/static/quiz/quiz-04.html
@@ -1702,7 +1702,7 @@ div.tocify {
 <li><p>During the time the quiz is available, you will see a <strong>Quiz 04</strong> assignment on Gradescope to submit the quiz.</p></li>
 <li><p><strong>The quiz is an individual assignment</strong>. You may <strong><u>not</u></strong> discuss the quiz with anyone else (either in the class or not). See the Academic Honesty guidelines in the <a href="https://sta210-fa20.netlify.app/syllabus/#course-community">course syllabus</a> for more information about academic conduct.</p></li>
 <li><p>The quiz is open-book, open-note, so you may use any materials from class (except other people!) as you take the quiz.</p></li>
-<li><p>Write your responses using a Word processor (e.g. Word, Pages, Google Docs, etc.). You do <strong><u>not</u></strong> have to use RStudio/R Markdown for any part of this quiz. <strong>Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.</strong></p></li>
+<li><p>Write your responses using a Word processor (e.g. Word, Pages, Google Docs, etc.). You do <strong><u>not</u></strong> need to use RStudio/R Markdown or conduct analysis for any part of this quiz. <strong>Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.</strong></p></li>
 </ul>
 </div>
 <div id="scenario" class="section level2">
@@ -1717,7 +1717,7 @@ div.tocify {
 <div id="questions" class="section level2">
 <h2>Questions</h2>
 <p>Answer the questions below describing how you would approach the regression analysis. For each question, in addition to stating the choice(s) you would make, include a brief explanation about why you’ve made the choice(s). Your responses should demonstrate your knowledge of the statistical concepts and how they applies in a real world scenario.</p>
-<p>Type your responses to the questions below using any word processor (e.g. Word, Pages, Google Docs, etc.). Include your name at the top of the document. You do <strong><u>not</u></strong> have to use R/R Markdown for any part of this quiz. <strong>Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.</strong></p>
+<p>Type your responses to the questions below using any word processor (e.g. Word, Pages, Google Docs, etc.). Include your name at the top of the document. You do <strong><u>not</u></strong> need to use R/R Markdown or conduct analysis for any part of this quiz. <strong>Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.</strong></p>
 <p><strong>Question 1 (5pt)</strong> What type of model would you use for this analysis? Explain your choice.</p>
 <p><strong>Question 2 (15pt)</strong> Describe the process you would use to select variables for the final model. In your description, include the model selection strategy and procedure, any potential interactions you might consider, and an explanation about why you made these choices.</p>
 <p><strong>Question 3 (10pt)</strong> The goal is to determine whether a particular email is spam and should be sent directly to the junk folder. Describe how you would use the output from your model to classify emails as spam or not spam. Be specific in your description and include explanation about your choices.</p>
