add lec 25 slides

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -305,7 +305,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-13/">Week 13</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-13/">Week 13: Missing data &#43; presenting results</a>
         </div>
     </div>
     
@@ -1698,10 +1698,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right">Week 13</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 09</td>
             <td style="width:40%;text-align:left">Dealing with missing data</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/25-missing-data.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
