--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -309,7 +309,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-13/">Week 13</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-13/">Week 13: Missing data &#43; presenting results</a>
         </div>
     </div>
     
