add lec 25 video

--- a/public/schedule/week-13/index.html
+++ b/public/schedule/week-13/index.html
@@ -366,7 +366,7 @@ font-size: 18px;
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/25-missing-data.html">Missing data</a></td>
-<td>Missing data</td>
+<td><a href="https://warpwire.duke.edu/w/R8kEAA/">Missing data</a></td>
 <td>AE 25</td>
 </tr>
 <tr>
