--- a/public/slides/25-missing-data.html
+++ b/public/slides/25-missing-data.html
@@ -97,12 +97,12 @@ Example: The U.S. Census
 
 ## Types of missingness
 
-- &lt;font class="vocab"&gt;Missing Not at Random (MNAR)&lt;/font&gt;: Missingness dependents on the variable itself
-    - Example: People with higher incomes are less likely to share them on a survey
+- &lt;font class="vocab"&gt;Missing Not at Random (MNAR)&lt;/font&gt;: Missingness depends on the variable itself
+    - Example: People with higher incomes are less likely to share their income on a survey
 
 ---
 
-## How to deal with missing?
+## How to deal with missing data?
 
 1. Only use observations with no missingness (complete-case analysis)
 
