--- a/public/schedule/week-13/index.html
+++ b/public/schedule/week-13/index.html
@@ -340,6 +340,7 @@ table tbody tr:nth-child(odd){
           <div class="tutorial"><nav id="TableOfContents">
   <ul>
     <li><a href="#lectures">Lectures</a></li>
+    <li><a href="#assignments">Assignments</a></li>
   </ul>
 </nav></div>
         </div>
@@ -367,13 +368,13 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/25-missing-data.html">Missing data</a></td>
 <td><a href="https://warpwire.duke.edu/w/R8kEAA/">Missing data</a></td>
-<td>AE 25</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-25-missing-data.html">AE 25: Missing data</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
 <td></td>
 <td></td>
-<td></td>
+<td>Communicating results</td>
 </tr>
 </tbody>
 </table>
@@ -384,15 +385,34 @@ font-size: 18px;
 |------------|---|
 | [Beyond multiple linear regression: Poisson regression](https://bookdown.org/roback/bookdown-BeyondMLR/ch-poissonreg.html#introduction-to-poisson-regression)| Optional   |
 
-
-## Assignments
-
-|                        |   |
-|------------------------|---|
-| [Project peer review](https://sta210-fa20.netlify.app/labs/peer-review.html) | **due Nov 5 at 11:59p** |
-| [Quiz 04](https://sta210-fa20.netlify.app/labs/quiz-04.html) | **Opens Nov 5 at 12a,  due Nov 6 at 11:59p** |
-| [Stats Experience #2](https://sta210-fa20.netlify.app/hw/stat-experience.html) | **due Nov 8 at 11:59p** |
 -->
+<h2 id="assignments">Assignments&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#assignments">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://sta199-fa20-002.netlify.app/project/#written-report">Written report</a></td>
+<td><strong>due Tue, Nov 17 at 11:59p</strong></td>
+</tr>
+<tr>
+<td><a href="https://sta199-fa20-002.netlify.app/project/#presentation-slides">Video presentation</a></td>
+<td><strong>due due Fri, Nov 20 at 11:59p</strong></td>
+</tr>
+<tr>
+<td><a href="https://sta199-fa20-002.netlify.app/project/#project-repository">Final repo</a></td>
+<td><strong>due Fri, Nov 20 at 11:59p</strong></td>
+</tr>
+<tr>
+<td><a href="https://sta199-fa20-002.netlify.app/project/#peer-feedback">Watch and comment on presentations</a></td>
+<td><strong>Nov 20 - Nov 22</strong></td>
+</tr>
+</tbody>
+</table>
 
 
       </div>
