--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1721,7 +1721,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Nov 11</td>
-            <td style="width:40%;text-align:left">Modeling in practice</td>
+            <td style="width:40%;text-align:left">Communicating results</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
