--- a/public/project/index.html
+++ b/public/project/index.html
@@ -432,6 +432,16 @@ Peer review will be graded on the extent to which it comprehensively and constru
 <h2 id="presentation-slides">Presentation Slides</h2>
 <p>In addition to the write-up, your team must also create presentation
 slides that summarize and showcase your project. Introduce your research question and dataset, showcase visualizations, and provide some conclusions. These slides should serve as a brief visual accompaniment to your write-up and will be graded for content and quality. For submission, convert these slides to a .pdf document to be submitted to Gradescope. The slides are due on <strong>Friday, November 20</strong>.</p>
+<p>The slide deck should have no more than 6 content slides + 1 title slide. Here is a <em><u>suggested</u></em> outline as you think through the slides; you do <em><u>not</u></em> have to use this exact format for the 6 slides.</p>
+<ul>
+<li>Title Slide</li>
+<li>Slide 1: Introduce the topic and motivation</li>
+<li>Slide 2: Introduce the data</li>
+<li>Slide 3: Highlights from EDA</li>
+<li>Slide 4: Final model</li>
+<li>Slide 5: Interesting findings from the model</li>
+<li>Slide 6: Conclusions + future work</li>
+</ul>
 <h2 id="video-presentation">Video presentation</h2>
 <p>Sometime before <strong>Friday, November 20</strong>, you/your group will upload a video presentation of your project to Warpwire. Note that all members must present, and that a ten-minute time limit is <strong>strictly enforced</strong>.</p>
 <p>For the presentation, you can speak over your slide deck, similar to the lecture content videos. I recommend using Zoom to record your presentation; however, you can use whatever platform works best for your group. Below are a few resources to help you record video presentations:</p>
