--- a/static/appex/ae-25-missing-data.html
+++ b/static/appex/ae-25-missing-data.html
@@ -391,32 +391,9 @@ summary {
 </div>
 <div id="dealing-with-missing-data" class="section level2">
 <h2>Dealing with Missing Data</h2>
-<pre><code>##      age  bmi  hyp chl
-## 1  20-39   NA &lt;NA&gt;  NA
-## 2  40-59 22.7   no 187
-## 3  20-39   NA   no 187
-## 4  60-99   NA &lt;NA&gt;  NA
-## 5  20-39 20.4   no 113
-## 6  60-99   NA &lt;NA&gt; 184
-## 7  20-39 22.5   no 118
-## 8  20-39 30.1   no 187
-## 9  40-59 22.0   no 238
-## 10 40-59   NA &lt;NA&gt;  NA
-## 11 20-39   NA &lt;NA&gt;  NA
-## 12 40-59   NA &lt;NA&gt;  NA
-## 13 60-99 21.7   no 206
-## 14 40-59 28.7  yes 204
-## 15 20-39 29.6   no  NA
-## 16 20-39   NA &lt;NA&gt;  NA
-## 17 60-99 27.2  yes 284
-## 18 40-59 26.3  yes 199
-## 19 20-39 35.3   no 218
-## 20 60-99 25.5  yes  NA
-## 21 20-39   NA &lt;NA&gt;  NA
-## 22 20-39 33.2   no 229
-## 23 20-39 27.5   no 131
-## 24 60-99 24.9   no  NA
-## 25 40-59 27.4   no 186</code></pre>
+<p>We will use the <code>nhanes2</code> data set from the mice R package. This data set is small subset of the NHANES data set specifically used to demonstrate imputation methods.</p>
+<pre class="r"><code>library(tidyverse)
+nhanes2 &lt;- mice::nhanes2</code></pre>
 </div>
 <div id="bmi" class="section level2">
 <h2>bmi</h2>
