--- a/public/schedule/week-13/index.html
+++ b/public/schedule/week-13/index.html
@@ -372,8 +372,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td></td>
-<td></td>
+<td>No slides</td>
+<td>No video</td>
 <td>Communicating results</td>
 </tr>
 </tbody>
