--- a/public/schedule/week-13/index.html
+++ b/public/schedule/week-13/index.html
@@ -374,7 +374,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td>No slides</td>
 <td>No video</td>
-<td>Communicating results</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-26-communication.html">Project info + communicating results</a></td>
 </tr>
 </tbody>
 </table>
