--- a/public/project/index.html
+++ b/public/project/index.html
@@ -452,7 +452,7 @@ slides that summarize and showcase your project. Introduce your research questio
 <li>Slide 6: Conclusions + future work</li>
 </ul>
 <h2 id="video-presentation">Video presentation</h2>
-<p>Sometime before <strong>Friday, November 20</strong>, you/your group will upload a video presentation of your project to Warpwire. Note that all members must present, and that a ten-minute time limit is <strong>strictly enforced</strong>.</p>
+<p>By <strong>Friday, November 20</strong>, your group will upload a video presentation of your project to Warpwire. Note that all members must present, and that a ten-minute time limit is <strong>strictly enforced</strong>.</p>
 <p>For the presentation, you can speak over your slide deck, similar to the lecture content videos. I recommend using Zoom to record your presentation; however, you can use whatever platform works best for your group. Below are a few resources to help you record video presentations:</p>
 <ul>
 <li><a href="https://kb.siue.edu/61721">Recording presentations in Zoom</a></li>
