--- a/public/project/index.html
+++ b/public/project/index.html
@@ -385,52 +385,52 @@ exactly upon knitting.</p>
 <p>Before you finalize your write up, make sure the printing of code chunks is off with the option <code>echo = FALSE</code>.</p>
 <p>Your final report must match your GitHub repository <em>exactly</em>. The mandatory components of the report are below. You are free to add additional sections as necessary. The report, including visualizations, should be <strong>no more than 15 pages long.</strong> There is no minimum page requirement; however, you must comprehensively address all of the aspects mentioned below.</p>
 <p>Please be judicious in what you include in your final write-up.</p>
-<p>The written report is worth 60 points, broken down as follows</p>
+<p>The written report is worth 50 points, broken down as follows</p>
 <table>
 <thead>
 <tr>
 <th>Total</th>
-<th>60 pts</th>
+<th>50 pts</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td><strong>Introduction/data</strong></td>
-<td>10 pts</td>
+<td>8 pts</td>
 </tr>
 <tr>
 <td><strong>Methodology</strong></td>
-<td>20 pts</td>
+<td>17 pts</td>
 </tr>
 <tr>
 <td><strong>Results</strong></td>
-<td>20 pts</td>
+<td>17 pts</td>
 </tr>
 <tr>
 <td><strong>Discussion</strong></td>
-<td>10 pts</td>
+<td>8 pts</td>
 </tr>
 </tbody>
 </table>
 <h3 id="introduction-and-data">Introduction and data</h3>
 <p>This section includes an introduction to the project motivation, data, and research question. Describe the data and definitions of key variables. It should also include some exploratory data analysis. All of the EDA won’t fit in the paper, so focus on the EDA for the response variable and a few other interesting variables and relationships.</p>
 <h4 id="grading-criteria">Grading criteria</h4>
-<p><strong>(10 pts)</strong> The research question and motivation are clearly stated in the introduction. The data are clearly described, including a description about how the data were originally collected and a concise definition of the relevant variables for the analysis. The explanatory data analysis helps the reader better understand the observations in the data set and interesting relationships between the variables.</p>
+<p><strong>(8 pts)</strong> The research question and motivation are clearly stated in the introduction. The data are clearly described, including a description about how the data were originally collected and a concise definition of the relevant variables for the analysis. The explanatory data analysis helps the reader better understand the observations in the data set and interesting relationships between the variables.</p>
 <h3 id="methodology">Methodology</h3>
 <p>This section includes a brief description of your modeling process. Explain the reasoning for the type of model you&rsquo;re fitting, predictor variables considered for the model including any interactions. Additionally, show how you arrived at the final model by describing the model selection process, any variable transformations (if needed), and any other relevant considerations that were part of the model fitting process.</p>
 <h4 id="grading-criteria-1">Grading criteria</h4>
-<p><strong>(20 pts)</strong> The analysis steps are appropriate for the data and research question. The group used a thoughtful approach to select the final model that took into account potential interaction effects and addressed violations in model conditions. The model conditions and diagnostics are thoroughly and accurately assessed as appropriate for the model. If violations of model conditions still exist, there was a reasonable attempt to address them, i.e. based on what we’ve learned this semester.</p>
+<p><strong>(17 pts)</strong> The analysis steps are appropriate for the data and research question. The group used a thoughtful approach to select the final model that took into account potential interaction effects and addressed violations in model conditions. The model conditions and diagnostics are thoroughly and accurately assessed as appropriate for the model. If violations of model conditions still exist, there was a reasonable attempt to address them, i.e. based on what we’ve learned this semester.</p>
 <h3 id="results">Results</h3>
 <p>This is also where you will output the final model and include a brief discussion of the model assumptions, diagnostics, and any relevant model fit statistics.</p>
 <p>Additionally, interpret the key results from the model. The goal is not to interpret every single variable in the model but rather to show that you are proficient in answering your research question using the results from the analysis. Focus on the variables that help you answer the research question and that provide relevant context for the reader.</p>
 <h4 id="grading-criteria-2">Grading criteria</h4>
-<p><strong>(20 pts)</strong> The model fit is clearly assessed, and interesting findings from the model are clearly described. Interpretations of model coefficients are used to support the key findings and conclusions, rather than merely listing the interpretation of every model coefficient. If the primary modeling objective is prediction, the model’s predictive power is assessed.</p>
+<p><strong>(17 pts)</strong> The model fit is clearly assessed, and interesting findings from the model are clearly described. Interpretations of model coefficients are used to support the key findings and conclusions, rather than merely listing the interpretation of every model coefficient. If the primary modeling objective is prediction, the model’s predictive power is assessed.</p>
 <h3 id="discussion">Discussion</h3>
 <p>This section is a conclusion and discussion. This will require a
 summary of what you have learned about your research question along with statistical arguments supporting your conclusions. Also, critique your own methods and provide suggestions for improving your analysis. Issues pertaining to the reliability and validity of your data and appropriateness of the statistical analysis should also be discussed here. Include 1 - 2 paragraphs on what you would do differently if you were able to start over with the project or what you would do next if you were going to continue work on the project should also be included.</p>
 <h4 id="grading-criteria-3">Grading criteria</h4>
-<p><strong>(5 pts)</strong> Overall conclusions from analysis are clearly described. The group has thoughtfully considered potential limitations of their data and/or analysis and presented potential ideas to address these limitations and avenues to explore in future work.</p>
-<p><strong>(5 pts)</strong> The final write up is neatly organized with clear section headers and appropriately sized figures with informative labels. All code, warnings, and messages are suppressed. Overall, the document would be presentable in a business or research setting.</p>
+<p><strong>(4 pts)</strong> Overall conclusions from analysis are clearly described. The group has thoughtfully considered potential limitations of their data and/or analysis and presented potential ideas to address these limitations and avenues to explore in future work.</p>
+<p><strong>(4 pts)</strong> The final write up is neatly organized with clear section headers and appropriately sized figures with informative labels. All code, warnings, and messages are suppressed. Overall, the document would be presentable in a business or research setting.</p>
 <h2 id="peer-review">Peer review</h2>
 <p>Critically reviewing others&rsquo; work is a crucial part of the scientific process, and STA 199 is no exception. You will be assigned a team to review. As part of the review process, you must provide your partner team a copy of your current report by <strong>Wednesday, October 28</strong>. After giving the report to your partner team, they will have until <strong>Friday, November 5</strong> to provide a detailed critique about the written report and data analysis. This feedback is intended to help you create a high quality final project, as well as give you experience
 reading and constructively critiquing the work of others.</p>
@@ -482,6 +482,11 @@ discussion forum.</li>
 <li>You’re done!</li>
 </ul>
 <p>You can see the Teaching team example in Sakai.</p>
+<h2 id="presentation-comments">Presentation comments</h2>
+<p>Each student will be assigned 2 presentations to watch. <a href="https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EfYgmTXEMs1ImpYXagtwYbQBbaUa9_bPI_2D7cTBSdhJ8w?e=O2eeUD">Click here</a> to see your viewing assignments.</p>
+<p>Watch the group&rsquo;s video, then click &ldquo;Reply&rdquo; to post a question for the group. You may not post a question that&rsquo;s already been asked on the discussion thread. Additionally, the question should be (i) substantive (i.e. it shouldn&rsquo;t be &ldquo;Why did you use a bar plot instead of a pie chart&rdquo;?), (ii) demonstrate your understanding of the content from the course, and (iii) relevant to that group&rsquo;s specific presentation, i.e demonstrating that you&rsquo;ve watched the presentation.</p>
+<p>You may start posting questions and comments on Sat, Nov 21 at 12 EST. <strong>All questions must be posted by Sun, Nov 22 at 11:59p EST</strong>.</p>
+<p><strong><i>This portion of the project will be assessed individually.</i></strong></p>
 <h2 id="project-repository">Project repository</h2>
 <p>In addition to your Gradescope submissions, we will be checking your GitHub repository. This repository should be contributed to equally by all team members and should include</p>
 <ul>
@@ -737,6 +742,7 @@ output:
     <li><a href="#peer-review">Peer review</a></li>
     <li><a href="#presentation-slides">Presentation Slides</a></li>
     <li><a href="#video-presentation">Video presentation</a></li>
+    <li><a href="#presentation-comments">Presentation comments</a></li>
     <li><a href="#project-repository">Project repository</a></li>
     <li><a href="#peer-teamwork-evaluation">Peer teamwork evaluation</a></li>
     <li><a href="#additional-notes-and-tips">Additional notes and tips</a></li>
