--- a/public/project/index.html
+++ b/public/project/index.html
@@ -702,7 +702,7 @@ output:
 <li><strong>Tell the &ldquo;so what&rdquo;:</strong> Your report and presentation should be more than a list of interpretations and technical definitions. Focus on what the results mean, i.e. what you want the audience to know about your topic after reading your report or viewing your presentation.
 <ul>
 <li>❌ For every one unit increase in horsepower, we expect the miles per gallon to decrease by 0.068 units, on average.</li>
-<li>✅ If the priority is to have good fuel economy, then one should choose a car with lower horsepower. Based on our model, the fuel economy is expected to decrease, on average, by 0.68 miles per gallon for each additional 10 units of horsepower.</li>
+<li>✅ If the priority is to have good fuel economy, then one should choose a car with lower horsepower. Based on our model, the fuel economy is expected to decrease, on average, by 0.68 miles per gallon for every 10 additional horsepower.</li>
 </ul>
 </li>
 <li><strong>Tell a story:</strong> All visualizations, tables, model output, and narrative should tell a cohesive story!</li>
