update late policy.

--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -342,10 +342,11 @@ table tbody tr:nth-child(odd){
 <p>Your lowest lab grade will be dropped at the end of the semester.</p>
 <h3 id="homework">Homework</h3>
 <p>In most homework assignemnts, you will apply what you&rsquo;ve learned during lecture and lab to complete data analysis tasks. You may discuss homework assignments with other students; however, homework should be completed and submitted individually. Homework must be typed up using R Markdown and GitHub and submitted to Gradescope.</p>
-<p>One homework assignment will be dedicated towards experiencing statistis. The goal of these experiences are for you to think about how the material you&rsquo;re learning in the course can connect with your experiences and society at large.</p>
+<p>One homework assignment will be dedicated towards engaging with statistics outside of the classroom by attending statistics-related talks, particpating in a data analysis competition, listening to related podcasts, etc. More details will be provided during the semester.</p>
 <p>Your lowest homework grade will be dropped at the end of the semester.</p>
 <h3 id="quizzes">Quizzes</h3>
 <p>The quizzes are an opportunity to assess the knowledge and skills you’ve learned. They will include both the conceptual and mathematical aspects of regression. More details will be provided before each quiz.</p>
+<p>Less weight will be given to your lowest quiz grade in the calculation of your overall quiz average.</p>
 <h3 id="final-project">Final Project</h3>
 <p>The purpose of the project is to apply what you’ve learned throughout the semester to explore an interesting data-based research question using regression. The project will be completed with your lab teams, and each team will present their work in video and in writing during the final exam period. More information about the project will be provided later in the semester.</p>
 <h3 id="participation">Participation</h3>
@@ -454,10 +455,17 @@ table tbody tr:nth-child(odd){
 </tbody>
 </table>
 </center>
-<h3 id="late-work">Late Work</h3>
-<p>You will have a 24 hour grace period after the due date of homework and lab assignments to turn them in with no penalty. I recommend using this policy as little as possible, but they are there to provide some relief and to accommodate multiple time zones. After the grace period, there is a 20% penalty for each day the assignment is late.</p>
-<p>If there are extenuating circumstances that prevent you from completing an assignment by the stated due date, please let Professor Tackett know as soon as possible.</p>
-<p><strong>Late work will not be accepted for the quizzes or the final project</strong></p>
+<h3 id="late-work--extensions">Late work + extensions</h3>
+<p>The due dates for assignments are there to help you keep up with the course material and to ensure the teaching team can provide feedback within a timely manner. We understand that things come up periodically that could make it difficult to submit an assignment by the deadline. Note that the lowest homework and lab assignment will be dropped and the lowest quiz grade will be down-weighted to accoommdate such cirumstances.</p>
+<p><strong>Late work policy</strong></p>
+<ul>
+<li>Homework and labs may be submitted up to 3 days late with a 5% penalty each day.</li>
+<li>There is no late work accepted for application exercises or quizzes.</li>
+<li>The late work policy for the project will be provided with the project instructions.</li>
+</ul>
+<p><strong>Waiver for extenuating circumstances</strong></p>
+<p>If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, please email Professor Tackett before the deadline, to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. This waiver may only be used once, so only use it for a truly extenuating circumstance.</p>
+<p>If there are circumstnaces that are having a longer-term impact on your academic performance, please notify your academic dean.</p>
 <h3 id="regrade-requests">Regrade Requests</h3>
 <p>Regrade requests should be submitted through the regrade request from on Gradescope. <strong>Requests for a regrade must be made within a week of when the assignment is returned; requests submitted later will not be considered.</strong> You should only submit a regrade request if there is an error in the grade calculation or a correct answer was mistakenly marked as incorrect. You should not submit a regrade to dispute the number of points deducted for an incorrect response. <em>Please note that by submitting a regrade request, your entire assignment may be regraded and you may potentially lose points.</em></p>
 <p>Due to the time consuming nature of responding to regrade requests, you should attend office hours and ask a member of the teaching team about the feedback before submitting the request. When you submit a request, please indicate which member of the teaching team you spoke with. <em>Note: Grades can only be changed by Professor Tackett. Teaching Assistants cannot change grades on returned assignments.</em></p>
