getting close on the syllabus.

--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -480,20 +480,10 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
 <h3 id="regrade-requests">Regrade Requests</h3>
 <p>Regrade requests must be submitted on Gradescope within a week of when an assignment is returned. Regrade requests will be considered if there was an error in the grade calculation or if you feel a correct answer was mistakenly marked as incorrect. Requests to dispute the number of points deducted for an incorrect response will not be considered. Note that by submitting a regrade request, the entire question may be regraded and you may potentially lose points.</p>
 <p>No grades will be changed after the final project presentations.</p>
-<h2 id="additional-resources">Additional resources</h2>
-<h3 id="academic-resource-center">Academic Resource Center</h3>
-<p>.</p>
-<p>There are times may need help with the class that is beyond what can be provided by the teaching team. In those instances, I encourage you to visit the Academic Resource Center. The <a href="https://arc.duke.edu">Academic Resource Center (ARC)</a> offers free services to all students during their undergraduate careers at Duke.  Services include Learning Consultations, Peer Tutoring and Study Groups, ADHD/LD Coaching, Outreach Workshops, and more. Because learning is a process unique to every individual, they work with each student to discover and develop their own academic strategy for success at Duke. Contact the ARC to schedule an appointment. Undergraduates in any year, studying any discipline can benefit! Contact <a href="mailto:arc@duke.edu" title="email"><a href="mailto:ARC@duke.edu">ARC@duke.edu</a></a>, 919-684-5917.</p>
-<h3 id="caps">CAPS</h3>
-<p><a href="https://studentaffairs.duke.edu/caps">Duke Counseling &amp; Pyschological Services (CAPS)</a> helps Duke Students enhance strengths and develop abilities to successfully live, grow and learn in their personal and academic lives. CAPS recognizes that we are living in unprecedented times and that the changes, challenges and stressors brought on by the COVID-19 pandemic have impacted everyone, often in ways that are tax our well-being. CAPS offers many services to Duke undergraduate students, including brief individual and group counseling, couples counseling and more. CAPS staff also provides outreach to student groups, particularly programs supportive of at-risk populations, on a wide range of issues impacting them in various aspects of campus life. CAPS provides services to students via Telehealth. To initiate services, you can contact their front desk at 919-660-1000.</p>
+<h3 id="additional-resources">Additional resources</h3>
+<p>Please see the <a href="https://sta210-sp21.netlify.app/help/">Help</a> page for additional academic and wellness resources.</p>
 <h3 id="important-dates">Important dates</h3>
-<ul>
-<li><strong>Aug 17</strong>: Classes begin</li>
-<li><strong>Aug 28</strong>: Drop/add ends</li>
-<li><strong>Oct 30</strong>: Last day to withdraw with W</li>
-<li><strong>Nov 16</strong>: Classes end</li>
-<li><strong>Nov 21</strong>: Final exam period, 9a - 12p</li>
-</ul>
+<p>You can find important dates on the  <a href="https://registrar.duke.edu/spring-2021-academic-calendar">Spring 2021 Academic Calendar</a>.</p>
 
       </div>
 
@@ -509,7 +499,6 @@ projects. Ignoring these requirements is a violation of the Duke Community Stand
     <li><a href="#course-community">Course community</a></li>
     <li><a href="#activities--assessment">Activities &amp; Assessment</a></li>
     <li><a href="#grading">Grading</a></li>
-    <li><a href="#additional-resources">Additional resources</a></li>
   </ul>
 </nav>
         </div>
