change from help to resources.

--- a/public/index.html
+++ b/public/index.html
@@ -426,9 +426,9 @@ table tbody tr:nth-child(odd){
 
 
 <div class="event">
-  <div class="eventTitle"><a href="/help/"><i class="fas fa-question-circle"></i>&nbsp;&nbsp;Where to find help!</a></div>
+  <div class="eventTitle"><a href="/resources/"><i class="fas fa-question-circle"></i>&nbsp;&nbsp;Where to find help!</a></div>
   <div class="eventDetails"><p>Office hours are a time for you to meet with a member of the teaching team to ask questions about content, assignments, or anything else related to the course. Join using the Zoom link in <a href="https://sakai.duke.edu">Sakai</a>.</p>
-<p>Click on the <a href="/help/">Help</a> tab for more information about other resources and ways to ask questions outside of office hours.</p>
+<p>Click on the <a href="/resources/">Resources</a> tab for additional resources for academic and wellness support.</p>
 </div>
 </div>
 
