update resources page.

--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -235,19 +235,7 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Resources</h1>
 
       <div class="article-content">
-      <h2 id="getting-help-in-the-course">Getting help in the course</h2>
-<p>We expect everyone will have questions at some point in the semester, so we encourage you to use the following resources for help:</p>
-<h2 id="ask-questions-during-lectures-and-lab">Ask questions during lectures and lab</h2>
-<p>If you have a question during lecture or lab, feel free to ask it! There are likely other students with the same question, so by asking you will create a learning opportunity for everyone.</p>
-<h2 id="office-hours">Office hours</h2>
-<p>The teaching team is here to help you be successful in the course. You are encouraged to attend office hours during the times posted on the home page to ask questions about the course content and assignments. A lot of questions are most effectively answered in-person, so office hours are a valuable resource. Please use them!</p>
-<p>Join using the Zoom link in <a href="https://sakai.duke.edu">Sakai</a>. You can find the office hours schedule on the <a href="https://sta199-fa20-002.netlify.app/">homepage</a> and in Sakai.</p>
-<h2 id="piazza">Piazza</h2>
-<p>Outside of class and office hours, any general questions about course content or assignments should be posted on <a href="https://piazza.com/class/kdtk5we3l333ns">Piazza</a>. There is a chance another student has already asked a similar question, so please check the other posts on Piazza before adding a new question. If you know the answer to a question posted on Piazza, I encourage you to respond!</p>
-<h2 id="email">Email</h2>
-<p>If you have questions about personal matters that are not appropriate for the public forum on Piazza (e.g. illness, accommodations, etc.), you may email Professor Tackett at <a href="mailto:maria.tackett@duke.edu">maria.tackett@duke.edu</a>.</p>
-<p>Please do not email about course content questions but rather post those on Piazza.</p>
-<h2 id="resources-for-the-course">Resources for the course</h2>
+      <h2 id="resources-for-the-course">Resources for the course</h2>
 <ul>
 <li>
 <p><a href="https://leanpub.com/openintro-statistics">OpenIntro Statistics 4th ed</a> by David Diez, Mine Çetinkaya-Rundel, and Christopher Barr</p>
@@ -264,10 +252,6 @@ table tbody tr:nth-child(odd){
 </ul>
 <h2 id="mental-heath-and-wellness-support">Mental heath and wellness support</h2>
 <p>If your mental health concerns and/or stressful events negatively affect your daily emotional state, academic performance, or ability to participate in your daily activities, many resources are available to you, including ones listed below. Duke encourages all students to access these resources, particularly as we navigate the transition and emotions associated with this time. Duke Student Government has worked with DukeReach and student advocates to create the Fall 2020 <a href="https://bit.ly/TwoClickSupport">&ldquo;Two-Click Support&rdquo;</a> Form, and <a href="https://studentaffairs.duke.edu/dukereach1">Duke Reach</a> has expanded its drop in hours as well.</p>
-<p>• WellTrack: <a href="https://app.welltrack.com/">https://app.welltrack.com/</a>
-2. Wellness Day 2021
-In lieu of a traditional class meeting on April 12, 2021, please use our regular class time to engage in reflection and wellness endeavors. A list of wellness strategies and programs is available at <a href="https://studentaffairs.duke.edu/duwell/wellness-day-2021">https://studentaffairs.duke.edu/duwell/wellness-day-2021</a> and will be updated throughout the spring.
-Although the goal of Wellness Day 2021 is to provide time and space to engage in activities that enhance your well-being, please remember that wellness isn’t achieved in one day. Balancing your personal, professional, and academic commitments is a skill that should be practiced regularly and over time.</p>
 <ul>
 <li>
 <p><strong>DukeReach</strong>: Provides comprehensive outreach services to identify and support students in managing all aspects of well being. If you have concerns about a student&rsquo;s behavior or health visit the website for resources and assistance.
@@ -293,6 +277,9 @@ visit <a href="https://studentaffairs.duke.edu/duwell/holistic-wellness">student
 <p><strong>WellTrack</strong>: <a href="https://app.welltrack.com/">app.welltrack.com</a></p>
 </li>
 </ul>
+<h2 id="wellness-day-2021">Wellness day 2021</h2>
+<p>In lieu of a traditional class meeting on April 12, please use our regular class time to engage in reflection and wellness endeavors. A list of wellness strategies and programs is available at <a href="https://studentaffairs.duke.edu/duwell/wellness-day-2021">studentaffairs.duke.edu/duwell/wellness-day-2021</a> and will be updated throughout the spring.</p>
+<p>Although the goal of Wellness Day 2021 is to provide time and space to engage in activities that enhance your well-being, please remember that wellness isn’t achieved in one day. Balancing your personal, professional, and academic commitments is a skill that should be practiced regularly and over time.</p>
 
       </div>
 
@@ -304,13 +291,9 @@ visit <a href="https://studentaffairs.duke.edu/duwell/holistic-wellness">student
           <div class="sectionTitle">Contents</div>
           <nav id="TableOfContents">
   <ul>
-    <li><a href="#getting-help-in-the-course">Getting help in the course</a></li>
-    <li><a href="#ask-questions-during-lectures-and-lab">Ask questions during lectures and lab</a></li>
-    <li><a href="#office-hours">Office hours</a></li>
-    <li><a href="#piazza">Piazza</a></li>
-    <li><a href="#email">Email</a></li>
     <li><a href="#resources-for-the-course">Resources for the course</a></li>
     <li><a href="#mental-heath-and-wellness-support">Mental heath and wellness support</a></li>
+    <li><a href="#wellness-day-2021">Wellness day 2021</a></li>
   </ul>
 </nav>
         </div>
