--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -235,7 +235,7 @@ table tbody tr:nth-child(odd){
       <h1 class="article-title">Syllabus</h1>
 
       <div class="article-content">
-      <p><strong><a href="https://sta210-fa20.netlify.app/syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
+      <p><strong><a href="sta210-sp21-syllabus.pdf">Click here</a> to download a PDF copy of the syllabus.</strong></p>
 <h2 id="course-learning-objectives">Course learning objectives</h2>
 <p>By the end of the semester, you will be able to&hellip;</p>
 <ul>
